.cvsignore		Ignore the coverage reports Makefile.cobjs		Have OLINCLUDES and XMINCLUDES for R4/R5 differences. 			Dependencies for climgccursor.c Makefile.cobjs-svr4	Have OLINCLUDES and XMINCLUDES for R4/R5 differences. 			Dependencies for climgccursor.c Makefile.dec3100	Have OLINCLUDES and XMINCLUDES for R4/R5 differences. Makefile.defs		Have OLINCLUDES and XMINCLUDES for R4/R5 differences. Makefile.hp700		Have OLINCLUDES and XMINCLUDES for R4/R5 differences. Makefile.sun4		Have OLINCLUDES and XMINCLUDES for R4/R5 differences. Makefile.svr4		Have OLINCLUDES and XMINCLUDES for R4/R5 differences. clim/accept-values.lisp		Added &key :view to accepting-values 				display-view-background 				Aborting edit marks field as modified 				to force it to be redisplayed 				made accept-values-button work with :align-prompts t 				Make calling frame default to frame of associated window clim/db-stream.lisp		Fixed window-inside-height clim/frames.lisp		Call pointer-pointer-position instead of native-position clim/gadget-output.lisp		gadget-includes-prompt-p :around  to allow :prompt nil in view 				to supress prompt clim/gestures.lisp		marked unavailable keysyms clim/input-protocol.lisp	queue pointer-exit-event clim/interactive-defs.lisp	read-token handles :eof rather than looping clim/interactive-protocol.lisp	frame-manager-display-help will popup window clim/standard-types.lisp	read-recursive handles :eof when reading from string climtoys/booch.lisp		Minor fixes climtoys/ib.el			Insert newline before appending definition climtoys/ib.lisp		Implemented move multiple 				Command table editing 				More composite-view stuff 				"Wires" demo/demo-activity.lisp		Deleted :width :height  constraint since it makes the 				pane too small on OLIT
misc/MyDrawingA.c		#include "climgccursor.c"
misc/olsupport.c		#include "climgccursor.c"
misc/train.lisp			Coverage goes to port specific file
misc/xtsupport.c		Added includes
postscript/postscript-port.lisp		Made showpage conditional on :destinati

--- a/Makefile.cobjs
+++ b/Makefile.cobjs
@@ -1,4 +1,4 @@
-# $fiHeader: Makefile.cobjs,v 1.1 93/04/16 09:26:08 layer Exp $
+# $fiHeader: Makefile.cobjs,v 1.2 93/04/23 09:17:10 cer Exp $
 #
 #  Makefile.cobj for CLIM 2.0, containing non-svr4 C rules
 #
@@ -33,15 +33,14 @@ stub-xt.c	:  $(XT_UNDEFS) misc/make-stub-file
 	misc/make-stub-file "void ___lisp_load_xt_stub ()"  $(XT_UNDEFS)  > stub-xt.c 
 
 xlibsupport.o	: xlib/xlibsupport.c 
-	$(CC) -c $(CFLAGS) -o xlibsupport.o xlib/xlibsupport.c
+	$(CC) -c $(CFLAGS) $(XINCLUDES) -o xlibsupport.o xlib/xlibsupport.c
 
 xtsupport.o: misc/xtsupport.c
-	$(CC) -c $(CFLAGS) $(XTSUPPORTINCLUDES) -o xtsupport.o \
+	$(CC) -c $(CFLAGS) $(XINCLUDES) $(XTSUPPORTINCLUDES) -o xtsupport.o \
 		misc/xtsupport.c
 
-MyDrawingA.o: misc/MyDrawingA.c
-	$(CC) -c $(CFLAGS) -o MyDrawingA.o misc/MyDrawingA.c
+MyDrawingA.o: misc/MyDrawingA.c misc/climgccursor.c
+	$(CC) -c $(CFLAGS) $(XMINCLUDES) -o MyDrawingA.o misc/MyDrawingA.c
 
-olsupport.o: misc/olsupport.c
-	$(CC) -c $(CFLAGS) -o olsupport.o misc/olsupport.c
-
+olsupport.o: misc/olsupport.c misc/climgccursor.c
+	$(CC) -c $(CFLAGS) $(OLINCLUDES) -o olsupport.o misc/olsupport.c
