--- a/Makefile.cobjs-svr4
+++ b/Makefile.cobjs-svr4
@@ -1,4 +1,4 @@
-# $fiHeader: $
+# $fiHeader: Makefile.cobjs-svr4,v 1.1 93/04/16 09:26:11 layer Exp $
 
 climol.so:	xlibsupport.o xtsupport.o olsupport.o
 	ld -G -o climol.so xlibsupport.o xtsupport.o olsupport.o \
@@ -9,15 +9,14 @@ climxm.so:	xlibsupport.o xtsupport.o MyDrawingA.o
 		-lXm -lXt -lX11 -lgen
 
 xlibsupport.o	: xlib/xlibsupport.c 
-	$(CC) -c -K pic $(CFLAGS) -o xlibsupport.o xlib/xlibsupport.c
+	$(CC) -c -K pic $(CFLAGS) $(XINCLUDES) -o xlibsupport.o xlib/xlibsupport.c
 
 xtsupport.o: misc/xtsupport.c
-	$(CC) -c -K pic $(CFLAGS) $(XTSUPPORTINCLUDES) -o xtsupport.o \
+	$(CC) -c -K pic $(CFLAGS) $(XINCLUDES) $(XTSUPPORTINCLUDES) -o xtsupport.o \
 		misc/xtsupport.c
 
-MyDrawingA.o: misc/MyDrawingA.c
-	$(CC) -c -K pic $(CFLAGS) -o MyDrawingA.o misc/MyDrawingA.c
+MyDrawingA.o: misc/MyDrawingA.c misc/climgccursor.c
+	$(CC) -c -K pic $(CFLAGS) $(XMINCLUDES)  -o MyDrawingA.o misc/MyDrawingA.c
 
-olsupport.o: misc/olsupport.c
-	$(CC) -c -K pic $(CFLAGS) -o olsupport.o misc/olsupport.c
-
+olsupport.o: misc/olsupport.c misc/climgccursor.c
+	$(CC) -c -K pic $(CFLAGS) $(OLINCLUDES) -o olsupport.o misc/olsupport.c
