--- a/Makefile.hp700
+++ b/Makefile.hp700
@@ -1,4 +1,4 @@
-# $fiHeader: Makefile.dec3100,v 1.2 93/03/01 15:59:08 cer Exp $
+# $fiHeader: Makefile.hp700,v 1.1 93/04/15 15:08:02 cer Exp $
 #
 #  Makefile.hp700 for CLIM 2.0
 #
@@ -13,7 +13,8 @@ MOTIFLIB=/usr/lib/Motif1.2/libXm.a
 MOTIFLIB_d=/usr/lib/Motif1.2/libXm.a
 XTLIB=/usr/lib/X11R5/libXt.a
 XLIB=/usr/lib/X11R5/libX11.a
-XINCLUDES=-I/usr/include/Motif1.2 -I/usr/include/X11R5
+XINCLUDES= -I/usr/include/Motif1.2 -I/usr/include/X11R5
+XMINCLUDES=$(XINCLUDES)
 
 # Make motif only. This is like the dec.
 # Perhaps this should be included.
