--- a/.cvsignore
+++ b/.cvsignore
@@ -5,7 +5,8 @@ stub-motif.c
 Clim-sizes.n
 slim
 slim.ol
-coverage-report.lisp
+coverage-reportxm.lisp
+coverage-reportol.lisp
 postscript.output
 test-suite-reportol.lisp
 test-suite-reportxm.lisp
