--- a/Makefile.sun4
+++ b/Makefile.sun4
@@ -1,4 +1,4 @@
-# $fiHeader: Makefile.sun4,v 1.2 93/04/02 18:40:42 cer Exp $
+# $fiHeader: Makefile.sun4,v 1.4 93/04/29 02:53:51 layer Exp $
 #
 #  Makefile.sun4 for CLIM 2.0
 #
@@ -10,7 +10,11 @@ MOTIFLIB=/net/vapor/3rd/motif-1.2.1/usr/lib/libXm$(DEBUGLIB).a
 MOTIFLIB_d=/net/vapor/3rd/motif-1.2.1/usr/lib/libXm.a
 XLIB= /net/vapor/3rd/motif-1.2.1/usr/lib/libX11$(DEBUGLIB).a 
 XTLIB=/net/vapor/3rd/motif-1.2.1/usr/lib/libXt$(DEBUGLIB).a
+
 XINCLUDES=-I/net/vapor/3rd/motif-1.2.1/usr/include
+XMINCLUDES=-I/net/vapor/3rd/motif-1.2.1/usr/include
+OLINCLUDES=-I/usr/openwin/include
+
 XTSUPPORTINCLUDES=-I/net/vapor/x11/R5/src/mit/lib/Xt
 # Do we really need this. Why is it referenced?
 MOTIFXTRAOS=/net/vapor/3rd/motif-1.2.1/usr/lib/Motif/Sun/dlsym.o
