--- a/Makefile.generic
+++ b/Makefile.generic
@@ -1,4 +1,4 @@
-# $fiHeader: Makefile.generic,v 1.11 1993/05/05 01:38:00 cer Exp $
+# $fiHeader: Makefile.generic,v 1.12 1993/06/04 16:06:14 cer Exp $
 #
 #  Makefile.generic for CLIM 2.0
 #
@@ -175,6 +175,11 @@ clim-small:	FORCE
 
 train	:	FORCE
 	$(TRAIN_TEXT)
+
+profile	:	FORCE
+	$(ECHO) "\
+	(clim-user::run-profile-clim-tests) \
+"       | $(CLIM) $(CLOPTS) -batch
 
 benchmark:
 	$(ECHO) "\
