echo LD_LIBRARY_PATH when building .so files

--- a/Makefile.cobjs-svr4
+++ b/Makefile.cobjs-svr4
@@ -1,10 +1,12 @@
 # $fiHeader: Makefile.cobjs-svr4,v 1.1 93/04/16 09:26:11 layer Exp $
 
 climol.so:	xlibsupport.o xtsupport.o olsupport.o
+	@echo LD_LIBRARY_PATH is $$LD_LIBRARY_PATH
 	ld -G -o climol.so xlibsupport.o xtsupport.o olsupport.o \
 		-L/usr/openwin/lib -lXol -lXt -lX11
 
 climxm.so:	xlibsupport.o xtsupport.o MyDrawingA.o
+	@echo LD_LIBRARY_PATH is $$LD_LIBRARY_PATH
 	ld -G -o climxm.so xlibsupport.o xtsupport.o MyDrawingA.o \
 		-lXm -lXt -lX11 -lgen
 
