testing fiHeader v Header

--- a/Makefile.generic
+++ b/Makefile.generic
@@ -1,4 +1,4 @@
-# $fiHeader: Makefile.generic,v 1.35 1996/03/13 09:55:10 colin Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.generic,v 1.38 1997/01/29 22:15:10 tomj Exp $
 #
 #  Makefile.generic for CLIM 2.0
 #
