--- a/Makefile.defs
+++ b/Makefile.defs
@@ -1,9 +1,9 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.defs,v 1.39 1997/02/05 01:41:52 tomj Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.defs,v 1.40 1997/05/05 22:35:16 layer Exp $
 #
 #  Makefile.defs for CLIM 2.0
 #
 
-CL	= ../src/dcl
+CL	= ../src/lisp -I ../src/dcl.dxl
 CLOPTS	= -qq -batch -backtrace-on-error
 
 DEVICE	= /dev/null
