--- a/Makefile.generic
+++ b/Makefile.generic
@@ -1,4 +1,4 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.generic,v 1.41 1997/05/30 17:56:31 layer Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.generic,v 1.42 1997/10/13 20:29:33 layer Exp $
 #
 #  Makefile.generic for CLIM 2.0
 #
@@ -207,7 +207,7 @@ cleanobjs:
 
 clean:
 	find . -name '*.fasl' -print | xargs rm -f
-	rm -f *.o *.so *.sl *.a slim slim.ol \
+	rm -f *.o *.$(SHARED_EXT) *.a slim \
 	  	stub-motif.c stub-olit.c stub-xt.c stub-x.c stub-wnn.c
 	rm -f *.z *.Z *.gz *.ilt *.out
 
