--- a/Makefile.sun4-svr4
+++ b/Makefile.sun4-svr4
@@ -1,11 +1,11 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.sun4-svr4,v 1.14 1997/05/31 01:00:23 tomj Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.sun4-svr4,v 1.15 1997/10/13 20:29:33 layer Exp $
 #
 #  Makefile.sun4-svr4 for CLIM 2.0
 #
 
 include Makefile.defs
 #CL_HOME=/fi/scm/4.3/sunos5/src
-CL=$(CL_HOME)/dcl
+#CL=$(CL_HOME)/dcl
 CLIM_HOME=$(CL_HOME)
 
 Makefile=Makefile.sun4-svr4
