--- a/Makefile.sgi4d-svr4
+++ b/Makefile.sgi4d-svr4
@@ -1,4 +1,4 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.sgi4d-svr4,v 1.10 1997/02/05 01:42:02 tomj Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.sgi4d-svr4,v 1.11 1997/10/20 23:10:57 layer Exp $
 #
 #  Makefile.sigi4d-svr4 for CLIM 2.0
 #
@@ -16,8 +16,8 @@ XINCLUDES=-I/usr/include
 PRODUCT-OBJS= $(PRODUCT-GENERIC-OBJS) $(STATIC-XM-OBJS) $(SHARED-XM-OBJS)
 
 PICFLAGS = -KPIC
-SHAREFLAGS = -shared -all
-MAKE_SHARED = ld
+SHAREFLAGS = 
+MAKE_SHARED = ld -shared -all
 STD_DEFINES = -DSVR4
 AR = /usr/bin/ar cq
 
