--- a/Makefile.sgi4d-svr4
+++ b/Makefile.sgi4d-svr4
@@ -1,4 +1,4 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.sgi4d-svr4,v 1.11 1997/10/20 23:10:57 layer Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.sgi4d-svr4,v 1.12 1998/02/13 21:04:44 layer Exp $
 #
 #  Makefile.sigi4d-svr4 for CLIM 2.0
 #
@@ -9,15 +9,15 @@ Makefile=Makefile.sgi4d-svr4
 
 TKLIB=-lXm
 XTLIB=-lXt
-XLIB=-lX11
+XLIB=-lX11 -lcvt
 
 XINCLUDES=-I/usr/include
 
 PRODUCT-OBJS= $(PRODUCT-GENERIC-OBJS) $(STATIC-XM-OBJS) $(SHARED-XM-OBJS)
 
-PICFLAGS = -KPIC
+PICFLAGS = -KPIC -n32
 SHAREFLAGS = 
-MAKE_SHARED = ld -shared -all
+MAKE_SHARED = ld -n32 -shared -all
 STD_DEFINES = -DSVR4
 AR = /usr/bin/ar cq
 
