--- a/Makefile.alpha
+++ b/Makefile.alpha
@@ -1,7 +1,6 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.alpha,v 1.5 1998/03/17 23:32:03 duane Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.alpha,v 1.6 1998/03/18 20:27:52 layer Exp $
 #
 #  Makefile.alpha for CLIM 2.0
-#
 
 include Makefile.defs
 
