--- a/Makefile.generic
+++ b/Makefile.generic
@@ -1,4 +1,4 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.generic,v 1.47.10.1 1998/04/08 17:18:43 layer Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.generic,v 1.47.10.2 1998/04/15 17:22:51 layer Exp $
 #
 #  Makefile.generic for CLIM 2.0
 #
@@ -209,6 +209,9 @@ testps: FORCE
 
 cleanobjs: 
 	rm -f *.o
+
+cleanfasls: FORCE
+	find . -name '*.fasl' -print | xargs rm -f
 
 clean:
 	find . -name '*.fasl' -print | xargs rm -f
